--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,8 +7,8 @@
     "settings": {
         "files.autoGuessEncoding": true,
         "files.encoding": "utf8",
-        "java.home": "C:\\openjdk-1.8.0",
-        "java.jdt.ls.vmargs": "C:\\Users\\Justin\\AppData\\Local\\Programs\\AdoptOpenJDK\\jdk-11.0.11.9-hotspot",
+        "java.home": "C:\\Users\\Justin\\AppData\\Local\\Programs\\AdoptOpenJDK\\jdk-11.0.11.9-hotspot",
+        "java.jdt.ls.vmargs": "-Dfile.encoding=UTF-8",
         "javac-linter.javac": "javac -Dfile.encoding=UTF-8"
     }
 }
