--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,6 @@
         "java.home": "C:\\Users\\Justin\\AppData\\Local\\Programs\\AdoptOpenJDK\\jdk-11.0.11.9-hotspot",
         "java.jdt.ls.vmargs": "-Dfile.encoding=UTF-8",
         "javac-linter.javac": "javac -Dfile.encoding=UTF-8"
-    }
+    },
+    "java.configuration.updateBuildConfiguration": "automatic"
 }
