--- a/qlfsky/pom.xml
+++ b/qlfsky/pom.xml
@@ -39,7 +39,7 @@
     <dependency>
       <groupId>org.mongodb</groupId>
       <artifactId>mongodb-driver-sync</artifactId>
-      <version>4.3.0-beta3</version>
+      <version>4.3.2</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
