--- a/qlfsky/pom.xml
+++ b/qlfsky/pom.xml
@@ -12,9 +12,9 @@
   <!-- FIXME change it to the project's website -->
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
-    <java.version>11</java.version>
+    <maven.compiler.source>${java.version}</maven.compiler.source>
+    <maven.compiler.target>${java.version}</maven.compiler.target>
+    <java.version>16</java.version>
   </properties>
 
   <repositories>
@@ -86,10 +86,6 @@
     <resources>
       <resource>
         <directory>${project.basedir}/src/main/resources</directory>
-        <includes>
-          <include>plugin.yml</include>
-          <include>config.yml</include>
-        </includes>
       </resource>
     </resources>
   </build>
