--- a/qlfsky/pom.xml
+++ b/qlfsky/pom.xml
@@ -31,9 +31,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.destroystokyo.paper</groupId>
+      <groupId>io.papermc.paper</groupId>
       <artifactId>paper-api</artifactId>
-      <version>1.16.5-R0.1-SNAPSHOT</version>
+      <version>1.17.1-R0.1-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -51,7 +51,7 @@
       <dependency>
           <groupId>eu.endercentral.crazy_advancements</groupId>
           <artifactId>crazy-advancement-api</artifactId>
-          <version>1.14</version>
+          <version>2.0</version>
           <scope>provided</scope>
       </dependency>
   </dependencies>
